--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Bloody Art Gallery</title>
+    <title>Julie Creative Portfolio</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -406,15 +406,82 @@
                 </li>
                 <li><a href="index.html#about" class="nav-link">About</a></li>
                 <li>
-                  <a href="index.html#experience" class="nav-link"
-                    >Experience</a
-                  >
+                  <a href="index.html#experience" class="nav-link">
+                    Experience
+                  </a>
                 </li>
                 <li>
                   <a href="index.html#portfolio" class="nav-link">Works</a>
                 </li>
                 <li>
                   <a href="index.html#contact" class="nav-link">Contact</a>
+                </li>
+                <li>
+                  <a
+                    class="nav-link btn-toggle d-flex justify-content-between align-items-center collapsed"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#pages-collapse"
+                    aria-expanded="false"
+                  >
+                    Pages
+                  </a>
+                  <div id="pages-collapse" class="collapse">
+                    <ul class="list-unstyled py-3">
+                      <li>
+                        <a href="single-post.html">
+                          Single Post
+                          <span class="badge bg-primary">PRO</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="single-portfolio.html">
+                          Single Portfolio
+                          <span class="badge bg-primary">PRO</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="contact.html">
+                          Contact
+                          <span class="badge bg-primary">PRO</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="team.html">
+                          My Team
+                          <span class="badge bg-primary">PRO</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="blog.html">
+                          Blog
+                          <span class="badge bg-primary">PRO</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="portfolio-masonry.html">
+                          Portfolio Masonry
+                          <span class="badge bg-primary">PRO</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="styles.html">
+                          Styles
+                          <span class="badge bg-primary">PRO</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+                <li>
+                  <a
+                    href="https://templatesjungle.gumroad.com/l/julia-onepage-portfolio"
+                    class="nav-link d-flex justify-content-between align-items-center fw-bold"
+                  >
+                    <span>Get PRO</span>
+                    <svg width="18" height="18" viewBox="0 0 24 24">
+                      <use xlink:href="#cart"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </nav>
@@ -424,8 +491,9 @@
               <a
                 href="mailto:contact@yoursite.com"
                 class="py-3 my-3 border-bottom d-flex"
-                >contact@yoursite.com</a
               >
+                contact@yoursite.com
+              </a>
             </div>
             <ul
               class="list-unstyled d-flex justify-content-start flex-wrap gap-3"
@@ -469,9 +537,9 @@
             <div class="py-4 border-top">
               <p>
                 HTML by
-                <a href="https://templatesjungle.com/" target="_blank"
-                  >TemplatesJungle</a
-                >
+                <a href="https://templatesjungle.com/" target="_blank">
+                  TemplatesJungle
+                </a>
               </p>
             </div>
           </div>
@@ -495,9 +563,9 @@
                 </div>
                 <div class="col-lg-6">
                   <div class="banner-content my-5 pt-5">
-                    <span class="text-muted text-uppercase"
-                      >Designer / Developer</span
-                    >
+                    <span class="text-muted text-uppercase">
+                      Designer / Developer
+                    </span>
                     <h1 class="banner-title display-xl lh-1 txt-fx slide-up">
                       Julia Stiles
                     </h1>
@@ -533,8 +601,9 @@
                   <a
                     href="#portfolio"
                     class="btn btn-dark text-uppercase py-4 px-5"
-                    >View All Work</a
                   >
+                    View All Work
+                  </a>
                 </div>
               </div>
             </div>
@@ -756,9 +825,9 @@
               <div class="section-header my-5" data-aos="fade-up">
                 <div class="row justify-content-center g-5">
                   <div class="col-lg-4">
-                    <span class="text-muted text-uppercase"
-                      >some of my recent works</span
-                    >
+                    <span class="text-muted text-uppercase">
+                      some of my recent works
+                    </span>
                     <h2 class="display-1 txt-fx slide-up">Portfolio</h2>
                   </div>
                   <div class="col-lg-4" data-aos="fade-up">
@@ -769,8 +838,9 @@
                     <a
                       href="portfolio-masonry.html"
                       class="btn btn-dark px-5 py-4"
-                      >View All</a
                     >
+                      View All
+                    </a>
                   </div>
                 </div>
               </div>
@@ -781,12 +851,13 @@
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     <div class="image-holder">
-                      <a href="single-portfolio.html" title="portfolio details"
-                        ><img
+                      <a href="single-portfolio.html" title="portfolio details">
+                        <img
                           src="images/port-item1.jpg"
                           alt="portfolio"
                           class="img-fluid"
-                      /></a>
+                        />
+                      </a>
                     </div>
                     <div
                       class="caption d-flex justify-content-between align-items-center"
@@ -797,12 +868,13 @@
                   </div>
                   <div class="swiper-slide">
                     <div class="image-holder">
-                      <a href="single-portfolio.html" title="portfolio details"
-                        ><img
+                      <a href="single-portfolio.html" title="portfolio details">
+                        <img
                           src="images/port-item2.jpg"
                           alt="portfolio"
                           class="img-fluid"
-                      /></a>
+                        />
+                      </a>
                     </div>
                     <div
                       class="caption d-flex justify-content-between align-items-center"
@@ -813,12 +885,13 @@
                   </div>
                   <div class="swiper-slide">
                     <div class="image-holder">
-                      <a href="single-portfolio.html" title="portfolio details"
-                        ><img
+                      <a href="single-portfolio.html" title="portfolio details">
+                        <img
                           src="images/port-item3.jpg"
                           alt="portfolio"
                           class="img-fluid"
-                      /></a>
+                        />
+                      </a>
                     </div>
                     <div
                       class="caption d-flex justify-content-between align-items-center"
@@ -829,12 +902,13 @@
                   </div>
                   <div class="swiper-slide">
                     <div class="image-holder">
-                      <a href="single-portfolio.html" title="portfolio details"
-                        ><img
+                      <a href="single-portfolio.html" title="portfolio details">
+                        <img
                           src="images/port-item1.jpg"
                           alt="portfolio"
                           class="img-fluid"
-                      /></a>
+                        />
+                      </a>
                     </div>
                     <div
                       class="caption d-flex justify-content-between align-items-center"
@@ -845,12 +919,13 @@
                   </div>
                   <div class="swiper-slide">
                     <div class="image-holder">
-                      <a href="single-portfolio.html" title="portfolio details"
-                        ><img
+                      <a href="single-portfolio.html" title="portfolio details">
+                        <img
                           src="images/port-item2.jpg"
                           alt="portfolio"
                           class="img-fluid"
-                      /></a>
+                        />
+                      </a>
                     </div>
                     <div
                       class="caption d-flex justify-content-between align-items-center"
