--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Julie Creative Portfolio</title>
+  <title>Bloody Art Gallery</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -243,8 +243,8 @@
               </div>
               <div class="col-lg-6">
                 <div class="banner-content my-5 pt-5">
-                  <span class="text-muted text-uppercase">Designer / Developer</span>
-                  <h1 class="banner-title display-xl lh-1 txt-fx slide-up">Julia Stiles</h1>
+                  <span class="text-muted text-uppercase">Tattoo</span>
+                  <h1 class="banner-title display-xl lh-1 txt-fx slide-up">Bloody Art Gallery</h1>
                 </div>
               </div>
             </div>
@@ -255,7 +255,7 @@
               <div class="col-lg-3">
                 <div class="icon-box" data-aos="fade-up">
                   <span>01</span>
-                  <h3 class="sub-heading">UI/UX Design</h3>
+                  <h3 class="sub-heading">Tattoo salonas</h3>
                   <p>At in proin consequat ut cursus venenatis sapien.</p>
                 </div>
               </div>
