--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <div class="banner-image text-center">
-                  <img src="images/banner-image.png" alt="banner" class="img-fluid" class="img-fluid">
+                  <img src="images/banner-image.gif" alt="banner" class="img-fluid" class="img-fluid">
                 </div>
               </div>
               <div class="col-lg-6">
