--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body class="bg-body homepage post-template" data-bs-spy="scroll" data-bs-target="#header-nav" tabindex="0">
@@ -243,7 +244,6 @@
               </div>
               <div class="col-lg-6">
                 <div class="banner-content my-5 pt-5">
-                  <span class="text-muted text-uppercase">Tattoo</span>
                   <h1 class="banner-title display-xl lh-1 txt-fx slide-up">Bloody Art Gallery</h1>
                 </div>
               </div>
